Bug 380706 Labels will not be reported while browsing the list item with arrow keys.r=surkov.alexander